<resources>
    <string name="app_name">星云电竟</string>
    <string name="connectservice">联系客服</string>
    <string name="matchDetialTitle">游戏竞猜</string>
    <string name="matchTodayTitle">今日</string>
    <string name="matchCurrentTitle">滚盘</string>
    <string name="matchFrontTitle">赛前</string>
    <string name="matchOverTitle">已结束</string>
    <string name="matchStatusOver">已结束</string>
    <string name="matchStatusFront">未开始</string>
    <string name="matchStatusError">已取消或异常</string>
    <string name="userCount">账号</string>
    <string name="userCountRemind">请输入账号/手机号</string>
    <string name="account_not_exist_str">该账号不存在</string>
    <string name="userKey">密码</string>
    <string name="reuserKey">确认密码</string>
    <string name="userKeyRemind">请输入6-16位英文或数字</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="login">登录</string>
    <string name="register_str">注册</string>
    <string name="registSucc">注册成功</string>
    <string name="registFail">注册失败</string>
    <string name="just_looking_around">游客登陆</string>
    <string name="phone">电话</string>
    <string name="phoneRemind">填写手机号</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="verify_title">验证码</string>
    <string name="codeHaveSend">验证码已发送</string>
    <string name="name">姓名</string>
    <string name="nameRemaind">为保证资金安全,请填写真实姓名</string>
    <string name="errorRemind">请输入6-16位英文或数字账号</string>
    <string name="errorRemind1">请输入6-16位英文或数字密码</string>
    <string name="errorRemind2">请输入6-16位英文或数字确认密码</string>
    <string name="errorRemind3">两次输入密码不一致密码</string>
    <string name="errorRemind4">姓名不能为空</string>
    <string name="errorRemind5">请填写正确手机号码</string>
    <string name="errorRemind6">验证码不能为空</string>
    <string name="changePassword">修改密码</string>
    <string name="newPassword">新密码</string>
    <string name="oldPassword">旧密码</string>
    <string name="forget_pswTitle">忘记密码</string>
    <string name="passwordHaveChange">修改成功</string>
    <string name="passwordHaveChangesucc">修改成功，请重新登陆！</string>
    <string name="loginsucc">登陆成功</string>
    <string name="loginfail">登陆失败</string>
    <string name="deleteAll">删除全部</string>
    <string name="moneyHave">余额 %s</string>
    <string name="inputMoney">输入金额 </string>
    <string name="willget">预计返回 </string>
    <string name="betmax">最大 </string>
    <string name="sure">确认 </string>
    <string name="getUseInfoFail">获取用户信息失败</string>
    <string name="getGameListSucc">获取比赛列表成功</string>
    <string name="hadlock">已锁盘</string>
    <string name="unbet">当前状态不能下注</string>
    <string name="maxSelect">最多可选择12场比赛</string>
    <string name="currentBetTitle">本次投注</string>
    <string name="maxGetTitle">预计最高返还</string>
    <string name="makesurebet">确认投注</string>
    <string name="packup">收起</string>
    <string name="haveselect">已选</string>
    <string name="clickedlook">投注单</string>
    <string name="betlistlook">查看</string>
    <string name="betminnum">最低押注%d</string>
    <string name="betmaxnum">最高押注%d</string>
    <string name="shortmoney">余额不足，请合理选择下注！</string>
    <string name="betchangewarm">您所选投注项的盘口、或有效性已经产生变化</string>
    <string name="acceptStr">接收赔率变化</string>
    <string name="onebet">单注</string>
    <string name="betsureing">订单确认中</string>
    <string name="betmoney">投注金额:</string>
    <string name="betsurewarm">您的订单需要系统确认，请在"投注记录"留意订单状态</string>
    <string name="betnum">订单号:</string>
    <string name="betresult">订单提交结果</string>
    <string name="lookbetlist">查看投注记录</string>
    <string name="continuebet">继续投注</string>
    <string name="inputBetNum">请输入下注金额</string>
    <string name="gameselectTitle">游戏筛选</string>
    <string name="allgames">全部</string>
    <string name="noGames">暂无相关比赛信息</string>
    <string name="gameing">进行中</string>
    <string name="nogamelooking">当前无直播</string>
    <string name="visitor">游客</string>
    <string name="goodinthenmorning">凌晨好！</string>
    <string name="goodmorning">上午好！</string>
    <string name="goodafternoon">中午好！</string>
    <string name="Goodafternoon">下午好！</string>
    <string name="goodnight">晚上好！</string>
    <string name="wallet">钱包</string>
    <string name="surplus">余额</string>
    <string name="BettingRecord">投注记录</string>
    <string name="message">消息</string>
    <string name="activity">活动</string>
    <string name="rules">玩法规则</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="agency">推广</string>
    <string name="share">分享</string>
    <string name="contactus">联系我们</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="title">title</string>
    <string name="register_ok">注册完成</string>
    <string name="myinformation">个人资料</string>
    <string name="cannotbet">您目前是游客身份不能进行此操作,去注册？</string>
    <string name="setTitle">设置</string>
    <string name="realname">真实姓名</string>
    <string name="birth">出生日期</string>
    <string name="changeph">修改手机号码</string>
    <string name="changekey">修改密码</string>
    <string name="exit">退出</string>
    <string name="havepay">已结算</string>
    <string name="notpay">未结算</string>
    <string name="recordTitle">投注记录</string>
    <string name="Failureoforders">订单投注失败</string>
    <string name="starttime">开始时间:</string>
    <string name="betodds">赔率:</string>
    <string name="moneyhavetitle">钱包余额</string>
    <string name="getmoney">提款</string>
    <string name="selecttitle">选择存款方式</string>
    <string name="bankcard">银行卡</string>
    <string name="selectbankcard">请添加提现银行卡</string>
    <string name="bankwarm">10分钟内到账</string>
    <string name="moneytitle">金额</string>
    <string name="getmoneywarm">提款金额最低100元</string>
    <string name="moneypokettitle">钱包余额</string>
    <string name="moneypoket">￥ %s</string>
    <string name="allget">全部提现</string>
    <string name="btnsure">确定</string>
    <string name="btncancle">取消</string>
    <string name="getmoneytitle">提款</string>
    <string name="inputmoneywarm">请输入提现金额</string>
    <string name="getsucc">提现申请已提交,详情请在提现记录中查看。</string>
    <string name="selectcard">选择提款卡</string>
    <string name="addnewcard">使用新卡提现</string>
    <string name="cardman">持卡人</string>
    <string name="cardname">请联系客服添加或修改姓名</string>
    <string name="cardwarm">提款卡姓名需与注册账号姓名一致</string>
    <string name="cardnumtitle">卡号</string>
    <string name="addcardnum">请添加提款卡号</string>
    <string name="cardbank">开户银行</string>
    <string name="cardbankname">请选择提款银行</string>
    <string name="addcardtitle">添加提款卡</string>
    <string name="addcardsucc">添加成功</string>
    <string name="tradingsTitle">交易记录</string>
    <string name="tradingsAll">全部</string>
    <string name="tradingsIn">存款</string>
    <string name="tradingsOut">提款</string>
    <string name="tradingsPre">优惠</string>
    <string name="tradingsreview">订单审核中</string>
    <string name="tradingsWithdrawal">提现中</string>
    <string name="tradingsSucc">成功</string>
    <string name="tradingsLost">失败</string>
    <string name="toast_momery">建议内存1GB,否则将影响使用体验</string>
    <string name="toast_flash">当前设备不支持闪光灯</string>
    <string name="toast_camera">无法启用相机</string>
    <string name="only">您还可以免费使用</string>
    <string name="changePhone">修改手机号</string>
    <string name="lookmatch">观看直播</string>
    <string name="messtitle">消息</string>
    <string name="unfinished">未完成</string>
    <string name="finished">已完成</string>
    <string name="preferential">优惠</string>
    <string name="task">任务</string>
    <string name="get">未领取</string>
    <string name="gettasksucc">领取成功</string>
    <string name="definal">| 全场</string>
    <string name="dewinner">获胜者</string>
    <string name="noticesTitle">公告详情</string>
</resources>

