<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_21212a">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/betbottomlayout1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currentBetTitle"
                        android:textSize="22sp"
                        android:textColor="@color/color_cdc3b3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="22sp"
                        android:textColor="@color/color_cdc3b3"
                        android:layout_marginStart="@dimen/dp_10"
                        android:id="@+id/betcouttv"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maxGetTitle"
                        android:textSize="22sp"
                        android:textColor="@color/color_cdc3b3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/betgetcouttv"
                        android:text="0"
                        android:textSize="22sp"
                        android:textColor="@color/color_8e6c37"
                        android:layout_marginStart="@dimen/dp_10"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/betsurebtn"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rec_00be0a_round100"
            android:gravity="center"
            android:text="@string/makesurebet"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/dp_10"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packup"
            android:textSize="22sp"
            android:textColor="@color/color_8e6c37"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/betsurebtn"
            android:layout_marginEnd="@dimen/dp_15"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/betbottomlayout2"
        android:visibility="gone">

        <TextView
            android:id="@+id/haveselecttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/haveselect"
            android:layout_marginStart="@dimen/dp_10"
            android:textSize="22sp"
            android:textColor="@color/color_cdc3b3" />

        <TextView
            android:id="@+id/betselectcount"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:background="@drawable/rec_tipcount"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/haveselecttitle"
            android:layout_marginStart="@dimen/dimen_5"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/lookbtn"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rec_00be0a_round100"
            android:gravity="center"
            android:text="@string/clickedlook"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/dp_10"
            android:textSize="25sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/betlistlook"
            android:textColor="@color/color_cdc3b3"
            android:layout_toLeftOf="@+id/lookbtn"
            android:layout_marginEnd="@dimen/dimen_5"
            android:textSize="25sp" />


    </RelativeLayout>

</RelativeLayout>
