<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg">

    <include layout="@layout/toolbar_back_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/rec_stroke_969696"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rec_stroke_banktitle">

            <TextView
                android:id="@+id/banktitlename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardman"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/dp_20"
                android:textColor="@color/color_cdc3b3"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_toRightOf="@+id/banktitlename"
                android:layout_marginStart="@dimen/dp_10">

                <View
                    android:id="@+id/resvierify_line1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@color/color_1a1c26" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/selectlayout"
                    android:layout_toRightOf="@+id/banktitlename"
                    android:layout_marginStart="@dimen/dp_10">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text=""
                        android:hint="@string/cardname"
                        android:textColorHint="#68718C"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:id="@+id/tvbankcardman"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/cardwarm"
                        android:textSize="12sp"
                        android:textColor="@color/color_cdc3b3" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"></View>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardnumtitle"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/color_cdc3b3" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_20">

            <com.lsh.library.BankNumEditText
                android:id="@+id/bankCardNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addcardnum"
                android:textColor="@color/color_ebe3d7"
                android:textColorHint="#68718C"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_20"
                android:textCursorDrawable="@drawable/my_cursor"
                android:singleLine="true"
                android:textSize="18sp"
                android:inputType="number" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/user_camera"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen_20"
                android:id="@+id/camera"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#383b4a"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dp_20"
            android:id="@+id/selectbanklayout">

            <TextView
                android:id="@+id/tvbanktitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardbank"
                android:textSize="15sp"
                android:layout_marginStart="@dimen/dp_20"
                android:textColor="@color/color_cdc3b3"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"/>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="#383b4a"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tvbanktitle"
                android:layout_marginStart="@dimen/dp_10"/>

            <TextView
                android:id="@+id/bankname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp"
                android:hint="@string/cardbankname"
                android:textColor="@color/color_ebe3d7"
                android:textColorHint="#68718C"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/tvbanktitle"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:layout_marginStart="31dp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/main_next"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen_20"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#383b4a"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:text="@string/btnsure"
            android:textColor="@color/color_cdc3b3"
            android:gravity="center"
            android:background="@drawable/rec_00be0a_round100"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:id="@+id/addsure"
            android:layout_marginStart="@dimen/dimen_30"
            android:layout_marginEnd="@dimen/dimen_30"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="45dp"></View>

    </LinearLayout>

</LinearLayout>
